--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,6 @@ body{
 }
 
 
-
 /* Styling untuk Desc-Item */
 .Desc-Item {
   margin-top: 3rem;
@@ -149,5 +148,112 @@ body{
       font-size: 0.7rem;
       padding: 8px 16px;
       margin-bottom: 15px;
+  }
+}
+
+
+/* Styling untuk container program-kerja */
+.program-kerja {
+  padding: 20px;
+  /* background-color: #f8f9fa; */
+  /* text-align: center; */
+}
+
+/* Styling untuk judul */
+.program-kerja h1 {
+  font-size: 28px;
+  font-weight: bold;
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+
+/* Styling untuk card dalam carousel */
+.program-kerja .card {
+  background-color: #ffffff;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 95%; 
+  margin: 0 auto;
+  align-items: center;
+  /* padding: 15px; */
+  /* text-align: center; */
+  transition: transform 0.3s ease;
+}
+
+/* Hover effect untuk card */
+.program-kerja .card:hover {
+  /* transform: translateY(-10px); */
+}
+
+/* Styling untuk gambar dalam card */
+/* Styling untuk gambar dalam card */
+.program-kerja .card img {
+  width: 306px; /* Mengatur lebar gambar */
+  height: 230px; /* Mengatur tinggi gambar */
+  object-fit: cover; /* Memastikan gambar mengisi area tanpa merusak rasio aspek */
+  border-radius: 8px;
+  margin-bottom: 15px;
+}
+
+
+/* Styling untuk judul dalam card */
+.program-kerja .card h2 {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 15px;
+  padding-left: 20px;
+  padding-right: 20px;}
+
+/* Styling untuk deskripsi waktu */
+.program-kerja .Desc-time, .program-kerja .Desc-location {
+  display: flex;
+  /* align-items: center; */
+  /* justify-content: center; */
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.program-kerja .Desc-time p, .program-kerja .Desc-location p {
+  margin-left: 5px;
+  font-size: 0.9rem;
+}
+
+/* Styling untuk tombol dengan ukuran lebih kecil */
+.program-kerja .card button {
+  width: 180px; /* Menentukan lebar tombol */
+  height: 35px; /* Menentukan tinggi tombol */
+  font-size: 0.875rem; /* Mengurangi ukuran font */
+  color: #003399;
+  background-color: white;
+  border: 2px solid #003399; /* Menambahkan border (stroke) */
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, border-color 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 25px;
+}
+
+/* Hover effect untuk tombol dengan perubahan warna border */
+.program-kerja .card button:hover {
+  background-color: #e8e8e8;
+}
+
+
+
+/* Responsif untuk perangkat lebih kecil */
+@media (max-width: 768px) {
+  .program-kerja h1 {
+      font-size: 2rem;
+  }
+
+  .program-kerja .card h2 {
+      font-size: 1.25rem;
+  }
+
+  .program-kerja .card button {
+      font-size: 0.9rem;
+      padding: 8px 16px;
   }
 }
