--- a/src/App.css
+++ b/src/App.css
@@ -1033,3 +1033,46 @@ body{
     width: 80%; /* Tombol mengambil lebar penuh */
   }
 }
+  .visi-misi-container {
+  display: flex;
+  justify-content: space-around;
+  padding: 20px;
+  background-color: #f0f4f7;
+  padding-bottom: 20vh;
+}
+
+.card_VM {
+  background-color: white;
+  border: 2px solid #0056b3;
+  border-radius: 20px;
+  width: 45%;
+  padding: 20px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.card_VM h3 {
+  color: #0056b3;
+  font-weight: 600;
+  text-align: left;
+  text-decoration: underline; /* Menambahkan garis bawah */
+  text-underline-offset: 2px; /* Mengatur jarak garis bawah dari teks */
+  margin-bottom: 15px;
+}
+
+.card_VM p {
+  text-align: justify;
+  color: #333;
+}
+
+@media (max-width: 768px) {
+  .visi-misi-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .card_VM {
+    width: 90%;
+    margin-bottom: 20px;
+  }
+}
