--- a/src/component/Navbar.css
+++ b/src/component/Navbar.css
@@ -36,7 +36,7 @@ nav p {
     font-size: 1.2rem;
     font-weight: bold;
     color: white;
-}
+} 
 
 /* Menu Hamburger */
 .menu {
@@ -141,3 +141,35 @@ nav ul li a:hover {
         width: 100%;
     }
 }
+
+/* Hover effect on dropdown */
+li.dropdown:hover .dropdown-menu {
+  display: block;
+  background-color: #003399;
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  padding: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+}
+
+.dropdown-menu li {
+  margin-left: 0;
+}
+
+.dropdown-menu a {
+  display: block;
+  padding: 5px 10px;
+  color: white;
+}
+/* 
+.dropdown-menu.open {
+  display: block;
+} */
